# novagenesis

./: .gitignore  CMakeLists.txt  Dockerfile  NGAppCommunicator  NGAppPublisher  NGConverter  README.md  make-all-docker-images.sh  make-generic-docker-image.sh  readme.txt  remove-all-docker-images.sh  tag-and-push-all-docker-images.sh
Common/src/: Action.cpp  Action.h  Block.cpp  Block.h  CLI.cpp  CLI.h  CLIRunInitialization01.cpp  CLIRunInitialization01.h  CLISCNAck01.cpp  CLISCNAck01.h  CommandLine.cpp  CommandLine.h  DataStore.h  File.cpp  File.h  GW.cpp  GW.h  GWHelloIPC01.cpp  GWHelloIPC01.h  GWMsgCl01.cpp  GWMsgCl01.h  GWRunInitialization01.cpp  GWRunInitialization01.h  GWSCNAck01.cpp  GWSCNAck01.h  GWSCNSeq01.cpp  GWSCNSeq01.h  GWStatusS01.cpp  GWStatusS01.h  GWStatusSCNS01.cpp  GWStatusSCNS01.h  HT.cpp  HT.h  HTBindReport01.cpp  HTBindReport01.h  HTDeliveryBind01.cpp  HTDeliveryBind01.h  HTGetBind01.cpp  HTGetBind01.h  HTInfoPayload01.cpp  (+38 more)
ContentApp/src/: ContentApp.cpp  ContentApp.h  Core.cpp  Core.h  CoreDeliveryBind01.cpp  CoreDeliveryBind01.h  CoreInfoPayload01.cpp  CoreInfoPayload01.h  CoreMsgCl01.cpp  CoreNotifyS01.cpp  CoreNotifyS01.h  CoreRunContentPublish01.cpp  CoreRunContentPublish01.h  CoreRunDiscover01.cpp  CoreRunEvaluate01.cpp  CoreRunEvaluate01.h  CoreRunExpose01.cpp  CoreRunInitialize01.cpp  CoreRunInvite01.cpp  CoreRunInvite01.h  CoreRunPeriodic01.cpp  CoreRunPublish01.cpp  CoreRunPublish02.cpp  CoreRunPublish02.h  CoreRunPublish03.cpp  CoreRunPublish03.h  CoreRunSubscribe01.cpp  CoreRunSubscribe01.h  CoreSCNAck01.cpp  CoreSCNAck01.h  CoreSCNSeq01.cpp  CoreStatusS01.cpp  CoreStatusS01.h  execContentApp.cpp
Docker/ContentApp/: CMakeLists.txt  Dockerfile  Run.sh  supervisord.conf
Docker/EPGS/: CMakeLists.txt  Dockerfile  Run.sh  supervisord.conf
Docker/IoTTestApp/: CMakeLists.txt  Dockerfile  Run.sh  supervisord.conf
Docker/NBTestApp/: CMakeLists.txt  Dockerfile  Run.sh  supervisord.conf
Docker/NRNCS/: CMakeLists.txt  Dockerfile  Run.sh  supervisord.conf
EPGS/: EPGS_Emulator.c  EPGS_Simulation.c  UnitTest.c  epgs.c  epgs.h  epgs_defines.h  epgs_ethernet.c  epgs_ethernet.h  epgs_wrapper.c  epgs_wrapper.h
EPGS/Actions/: epgs_exposition.c  epgs_exposition.h  epgs_hello.c  epgs_hello.h  epgs_pubNotify.c  epgs_pubNotify.h  epgs_subServiceAcceptance.c  epgs_subServiceAcceptance.h
EPGS/Common/: MurmurHash3.c  MurmurHash3.h  ng_command.c  ng_command.h  ng_epgs_hash.c  ng_epgs_hash.h  ng_hash_table.c  ng_hash_table.h  ng_message.c  ng_message.h  tinythread.cpp  tinythread.h
EPGS/Controller/: epgs_controller.c  epgs_controller.h
EPGS/DataStructures/: epgs_structures.c  epgs_structures.h
EPGS/Network/: PG.c  PG.h
EPGS/ng_util/: ng_json.c  ng_json.h  ng_util.c  ng_util.h
GIRS/src/: GIRS.cpp  GIRS.h  IR.cpp  IR.h  IRDeliveryBind01.cpp  IRDeliveryBind01.h  IRGetBind01.cpp  IRGetBind01.h  IRGetBind02.cpp  IRGetBind02.h  IRInfoPayload01.cpp  IRInfoPayload01.h  IRInfoPayload02.cpp  IRInfoPayload02.h  IRMessageSeq01.cpp  IRMessageSeq01.h  IRMessageType01.cpp  IRMessageType01.h  IRMessageType02.cpp  IRMessageType02.h  IRMsgCl01.cpp  IRMsgCl01.h  IRMsgCl02.cpp  IRMsgCl02.h  IRRevokeBind01.cpp  IRRevokeBind01.h  IRRunInitialization01.cpp  IRRunInitialization01.h  IRRunPeriodic01.cpp  IRRunPeriodic01.h  IRSCNAck01.cpp  IRSCNAck01.h  IRSCNSeq01.cpp  IRSCNSeq01.h  IRSCNSeq02.cpp  IRSCNSeq02.h  IRStatusS01.cpp  IRStatusS01.h  IRStoreBind01.cpp  IRStoreBind01.h  (+3 more)
HTS/src/: DHT.cpp  DHT.h  DHTDeliveryBind01.cpp  DHTDeliveryBind01.h  DHTMsgCl01.cpp  DHTMsgCl01.h  DHTRunInitialization01.cpp  DHTRunInitialization01.h  DHTRunPeriodic01.cpp  DHTRunPeriodic01.h  HTS.cpp  HTS.h  execHTS.cpp
IO/GIRS/: GIRS.ini
IO/HTS/: HTS.ini
IO/NGAppCommunicator/: App.ini
IO/NGAppPublisher/: App.ini  Debug_F1573C26B1F7750CB324AC5A0B55787C_Core_BID.txt
IO/NRNCS/: NRNCS.ini
IO/PGCS/: PGCS.ini
IO/Source1/: App.ini
IoTTestApp/src/: Core.cpp  Core.h  CoreDeliveryBind01.cpp  CoreInfoPayload01.cpp  CoreMsgCl01.cpp  CoreMsgCl01.h  CoreNotifyS01.cpp  CoreRunDiscover01.cpp  CoreRunDiscover01.h  CoreRunEvaluate01.cpp  CoreRunEvaluate01.h  CoreRunExpose01.cpp  CoreRunExpose01.h  CoreRunInitialize01.cpp  CoreRunInitialize01.h  CoreRunInvite01.cpp  CoreRunInvite01.h  CoreRunPeriodic01.cpp  CoreRunPeriodic01.h  CoreRunPublish01.cpp  CoreRunPublish01.h  CoreRunPublish02.cpp  CoreRunPublish02.h  CoreRunPublish03.cpp  CoreRunPublish03.h  CoreRunSubscribe01.cpp  CoreRunSubscribe01.h  CoreSCNAck01.cpp  CoreSCNSeq01.cpp  CoreSCNSeq01.h  CoreStatusS01.cpp  IoTTestApp.cpp  IoTTestApp.h  execIoTTestApp.cpp
Make/: compile-c++2a.sh  compile.sh  compile_PGCS.sh  makedirs.sh  readme.txt
NBTestApp/src/: Core.cpp  Core.h  CoreDeliveryBind01.cpp  CoreDeliveryBind01.h  CoreMsgCl01.cpp  CoreMsgCl01.h  CoreRunDiscover01.cpp  CoreRunDiscover01.h  CoreRunEvaluate01.cpp  CoreRunEvaluate01.h  CoreRunInitialize01.cpp  CoreRunInitialize01.h  CoreRunPeriodic01.cpp  CoreRunPeriodic01.h  CoreRunSubscribe01.cpp  CoreRunSubscribe01.h  CoreSCNAck01.cpp  CoreSCNAck01.h  CoreSCNSeq01.cpp  CoreSCNSeq01.h  CoreStatusS01.cpp  CoreStatusS01.h  NBTestApp.cpp  NBTestApp.h  execNBTestApp.cpp
NG_Web/HtmlToHash/: NGConverter.sh  buildHTMLhash.php  gmon.out  regex-meta-description.txt  regex-title.txt
NG_Web/NGAppCommunicator/: .cproject  .project  gmon.out
NG_Web/NGAppPublisher/: .cproject  .project  gmon.out
NG_Web/NGBrowser/: NGBrowser.pro  NGBrowser.pro.user.3.2-pre1  NGBrowser.pro.user.65a0dc0  NGBrowser.pro.user.7f8eeb1  NGConnectorIf.h  global.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  ngcommunication.xml  ngconnector.cpp  ngconnector.h  ngconnectorif.xml  ngs-item-mainwindow-tmpl.html  ngs-mainwindow-tmpl.html  ngtemplate.cpp  ngtemplate.h  ngurl.cpp  ngurl.h
NG_Web/NGConverter/: .cproject  .project
NG_Web/Simulation/: web_simulation_automatic.m  web_simulation_manual.m
NG_Web/StripTags/: index.html  index2.html  strip.php
NRNCS/src/: NR.cpp  NR.h  NRDeliveryBind01.h  (+26 more)
Plots/: sub_debug.plt
Scripts/: run_NGAppCommunicator.sh  run_NGAppPublisher.sh  run_NGBrowser.sh  run_core.sh
(+362 files in other folders)
